<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="SpUsage">

    <LinearLayout
        android:id="@+id/ln_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:translationZ="@dimen/dp_1"
        android:visibility="gone">

        <boilerplate.widget.customText.TextViewFont
            android:id="@+id/tv_title_pin"
            style="@style/StyleRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pin_message"
            android:textSize="@dimen/dp_12" />

        <boilerplate.widget.customText.TextViewFont
            android:id="@+id/tv_see_all_pin"
            style="@style/StyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_next_grey"
            android:drawablePadding="@dimen/dp_7"
            android:text="@string/see_all"
            android:textColor="@color/color_7589A3"
            android:textSize="@dimen/dp_12" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:translationZ="0dp"
        android:visibility="gone"
        tools:ignore="HardcodedText" />

    <boilerplate.widget.customText.TextViewFont
        android:id="@+id/tv_collapse"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:drawableEnd="@drawable/ic_arrow_up"
        android:drawablePadding="@dimen/dp_5"
        android:text="@string/collapse"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dp_12"
        android:visibility="gone" />
</LinearLayout>