<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_edit"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/img_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:navigationIcon="@drawable/ic_arrow_previous_white"
        app:title="@string/edit_information" />

    <boilerplate.widget.image.RoundedImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/dp_68"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@+id/tv_name"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_edit"
        app:radius="@dimen/dp_34" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_pick"
        android:layout_width="@dimen/dp_21"
        android:layout_height="0dp"
        android:background="@drawable/bg_circle_border"
        android:padding="@dimen/dp_5"
        android:src="@drawable/ic_camera_fill_grey"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/img_avatar"
        app:layout_constraintStart_toEndOf="@id/img_avatar"
        app:layout_constraintTop_toBottomOf="@id/img_avatar" />

    <boilerplate.widget.customText.TextViewFont
        android:id="@+id/tv_name"
        style="@style/StyleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/color_081C36"
        android:textSize="@dimen/dp_16"
        app:layout_constraintBottom_toTopOf="@+id/tv_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        tools:text="TB.Đỗ Minh Cường" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_status"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/ic_quote_blue"
        app:layout_constraintBottom_toBottomOf="@id/tv_status"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/tv_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_status" />

    <boilerplate.widget.customText.TextViewFont
        android:id="@+id/tv_status"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/state"
        android:textColor="@color/color_606060"
        android:textSize="@dimen/dp_13"
        app:layout_constraintBottom_toTopOf="@+id/edt_status"
        app:layout_constraintLeft_toRightOf="@id/img_status"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <boilerplate.widget.customText.EditTextFont
        android:id="@+id/edt_status"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        android:layout_below="@+id/tv_status"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_border_corner_transparent"
        android:maxLength="100"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toTopOf="@id/tv_number_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_number_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/ic_phone_blue"
        app:layout_constraintBottom_toBottomOf="@id/tv_number_phone"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/tv_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_number_phone" />

    <boilerplate.widget.customText.TextViewFont
        android:id="@+id/tv_number_phone"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/phone_number"
        android:textColor="@color/color_606060"
        android:textSize="@dimen/dp_13"
        app:layout_constraintBottom_toTopOf="@id/edt_number_phone"
        app:layout_constraintLeft_toRightOf="@id/img_number_phone"
        app:layout_constraintTop_toBottomOf="@id/edt_status" />

    <boilerplate.widget.customText.EditTextFont
        android:id="@+id/edt_number_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_border_corner_transparent"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toTopOf="@id/tv_other_number_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_number_phone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_other_number_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/ic_phone_blue"
        app:layout_constraintBottom_toBottomOf="@id/tv_other_number_phone"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/tv_other_number_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_other_number_phone" />

    <boilerplate.widget.customText.TextViewFont
        android:id="@+id/tv_other_number_phone"
        style="@style/StyleRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:text="@string/different_number"
        android:textColor="@color/color_606060"
        android:textSize="@dimen/dp_13"
        app:layout_constraintBottom_toTopOf="@id/edt_other_number_phone"
        app:layout_constraintLeft_toRightOf="@id/img_other_number_phone"
        app:layout_constraintTop_toBottomOf="@id/edt_number_phone" />

    <boilerplate.widget.customText.EditTextFont
        android:id="@+id/edt_other_number_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        android:layout_below="@+id/tv_other_number_phone"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:background="@drawable/bg_border_corner_transparent"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        android:textSize="@dimen/dp_14"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_other_number_phone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:elevation="@dimen/dp_10"
        android:padding="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/ButtonCancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_7"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_7"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp_14"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>